--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,6 +11,7 @@ body {
     font-family: Yellowtail,cursive;
 }
 .homeLollyList {
+    justify-content: center;
     display: flex;
     flex-direction: row;
 }
@@ -62,4 +63,8 @@ body {
     margin-top: 1em;
     margin-bottom: 1em;
     font-family: Yellowtail,cursive;
+}
+
+.from {
+    margin-left: 50px;
 }
